# esp32-s3-speakers

./: .gitignore  CMakeLists.txt  sdkconfig
components/es8156/: CMakeLists.txt  es8156.c
components/es8156/include/: es8156.h
components/espressif__tinyusb/src/portable/espressif/esp32sx/: dcd_esp32sx.c
main/: CMakeLists.txt  Kconfig  audio.c  idf_component.yml  led.c  main.c  touchsensor.c  usb.c  usb_descriptors.c
main/include/: audio.h  global.h  led.h  touchsensor.h  usb.h
main/public_include/: tusb_config.h  usb_descriptors.h
